1.5.0 (#14)
* Added support for java records

* #13 - @Reflectable on interface throws NPE in annotation processor

* update to gradle 8.8